--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,17 +1,19 @@
 .footer-container {
-    height: 20vh;
+    position:relative;
+    height: 13vh;
     width: 70%;
     background-color: rgb(134, 12, 182);
     margin-top: 60px;
     margin-bottom: 60px;
     border-radius: 10px;
     margin-left: 15%;
+    padding: 0px 10px;
     color: white;
 }
 .info {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     color: white;
 }
 .info>p {
@@ -22,9 +24,34 @@
     font-size: 1.6rem;
     color: white;
 }
-.createdBy {
-    text-align: center;
-    color: rgb(248, 194, 33);
-    font-size: 1.7rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+@media screen and (max-width: 800px) {
+    .footer-container {
+        position: relative;
+        height: 20vh;
+        top: 105%;
+        right: 140px;
+        width: 90%;
+        background-color: white;
+        margin-bottom: 60px;
+        border-radius: 10px;
+        margin-left: 15%;
+        color: rgb(134, 12, 182);
+    }
+    .info {
+        display: flex;
+        justify-content: space-between;
+        color: rgb(154, 154, 154);
+    }
+
+    .info>p {
+        font-size: 5rem;
+        font-weight: bold;
+        color: rgb(154, 154, 154);
+    }
+
+    .mail {
+        font-size: 3rem;
+        font-weight: bold;
+        color: rgb(154, 154, 154);
+    }
 }
