--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,13 +1,3 @@
-.nav-container {
-    /* position: absolute;
-    height: 40vh;
-    width: 40%;
-    background-color: rgb(16, 15, 15);
-    top: -10px;
-    margin-left: 30%;
-    border-radius: 10px;
-    z-index: -1; */
-}
 .nav-list {
     margin-top: 0;
     display: flex;
@@ -23,4 +13,22 @@
     font-size: 1.3rem;
     border-bottom: 2px solid rgb(134, 12, 182);
     z-index: 20;
+}
+@media screen and (max-width: 800px) {
+    .nav-list {
+        margin-top: 0;
+        display: flex;
+        justify-content: center;
+        padding-top: 10px;
+        margin-right: 5em;
+    }
+    .nav-list>a {
+        list-style: none;
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        font-size: 3rem;
+        border-bottom: 2px solid rgb(134, 12, 182);
+        z-index: 20;
+    }
 }
